<resources>
    <string name="app_name">Clean Skin</string>
    <string name="addnew">Add new makeup</string>
    <string name="submit">submit</string>
    <string name="add">Add to Calendar</string>
    <string name="brand">Brand</string>
    <string name="add_new_makeup">Add new skincare</string>
    <string name="lipstick">Lipstick</string>
    <string name="brow_pencil">Eye Brow</string>
    <string name="blush">Blush</string>
    <string name="eyeshadow">Eyeshadow</string>
    <string name="product_info">Product Information:</string>
    <string name="tips">Tips:</string>
    <string name="nail">Nail Polish</string>
    <string name="eyeliner">Eye Liner</string>
    <string name="Eyelashes">Eyelashes</string>
    <string name="foundation">Foundation</string>
    <string name="concealer">Concealer</string>
    <string name="lipgloss">Lip Gloss</string>
    <string name="powder">Powder</string>
    <string name="Mascara">Mascara</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="scanning">Scanning Item...</string>
    -----------------------------------------------------------------------------------------------------
    <string name="why">Why is Cruelty free makeup important?</string>
    <string name="crueltyFreeParagraph">As we know today that more and more makeup brands are producing cruelty makeup.
    Cruelty free isn\'t just a hashtag or a trend to jump on. It a movement that was first started by Lady Dowding
    back in 1959 when she introduced "Beauty without cruelty". She persuaded manufacturers to use fake fur instead of real fur.
    How would you know if your makeup is cruelty free? Here is a quick link to </string>
    <string name="link"><a href="https://www.crueltyfreekitty.com/list-of-cruelty-free-brands/">Cruelty Free Kitty</a></string>
    <string name="paragraph2">They have a list of the most current brands that are Cruelty Free</string>
    -----------------------------------------------------------------------------------------------------
    <string-array name="BlushType">
        <item>Type of Blush</item>
        <item>Cream</item>
        <item>Powder</item>
        <item>Liquid</item>
    </string-array>
    <string-array name="eyebrow">
        <item>Type of Brow makeup</item>
        <item>Pencil</item>
        <item>Pomade</item>
        <item>Gel</item>
        <item>Powder</item>
    </string-array>
    <string-array name="Cleanser">
        <item>Type of Cleanser</item>
        <item>Foaming</item>
        <item>Cleansing Balm</item>
        <item>Exfoliating</item>
    </string-array>
    <string-array name="coucealer">
        <item>Cream</item>
    </string-array>
    <string-array name="N_A">
        <item>N/A</item>
    </string-array>
    <string-array name="eyeshadow">
        <item>Type of Eyeshadow</item>
        <item>Cream</item>
        <item>Powder</item>
    </string-array>
    <string-array name="lipstick">
        <item>Type of Lipstick</item>
        <item>Bullet Lipstick</item>
        <item>Liquid Lipstick</item>
    </string-array>
    <string-array name="foundation">
        <item>Type of Foundation</item>
        <item>Liquid</item>
        <item>Cream</item>
        <item>Powder</item>
        <item>BB and CC Creams</item>
    </string-array>
    <string-array name="powders">
        <item>Type of Powder</item>
        <item>Highlighter</item>
        <item>Translucent</item>
    </string-array>
    <string-array name="treatments">
        <item>Types of Treatment</item>
        <item>Microdermabrasion</item>
        <item>Chemical Peel</item>
        <item>Laser Resurfacing</item>
        <item>Laser Skin Rejuvenation</item>
        <item>Acne Blue Light Therapy</item>
        <item>Thermage</item>
    </string-array>
    <string-array name="mask">
        <item>Type of Mask</item>
        <item>Sheet Mask</item>
        <item>Wash-off Mask</item>
    </string-array>
    <string-array name="eyeliner">
        <item>Type of Eyeliner</item>
        <item>Pencil</item>
        <item>Liquid</item>
    </string-array>
    <string-array name="nail">
        <item>Type of Nail Polish</item>
        <item>Regular</item>
        <item>Gel</item>
    </string-array>
    -----------------------------------------------------------------------------------------------------
    <string name="concealertext">Concealer can last up to can last up to 1 Year. </string>
    <string name="concealertext2">If it starts to smell or clump up trow it away immediately</string>
    <string name="blushtext">Types of Blush: Cream, Liquid, and Powder</string>
    <string name="blushtext2">To keep blush longevity, it is highly suggested to wash your brushes</string>
    <string name="home_button">home button</string>
    <string name="eyelinertext">Type of Eyeliner: Liquid, and Pencil</string>
    <string name="eyelinertext2">Just like Mascara it isn\'t ideal to share with other people</string>
    <string name="eyebrowtext">Types of Eyebrow: Pencil, Pomade, Gel, and Powder</string>
    <string name="eyebrowtext2">Pencil will last longer than the pomade and gel due to being sharpened
    on a constant basis</string>
    <string name="mascaratext">Types of Mascara: Waterproof, and Regular</string>
    <string name="mascaratext2">If Mascara is unopened, the shelf life will be up to 3 years</string>
    <string name="foundationtext">Types of Foundation: Liquid, Cream, Powder, BB creams and CC creams</string>
    <string name="foundationtext2">Keeping Foundation germ free is to keep fingers away from the product.
    if any discoloration and separation occurs, throw the product away immediately </string>
    <string name="lipglosstext">Types of Lip Gloss: Meant for high shine</string>
    <string name="lipglosstext2">If Discoloration and separation occurs throw away immediately</string>
    ---source from https://www.bllashes.com/blogs/blog/how-long-can-eyelash-glue-last
    <string name="eyelashtext">Eyelashes Depend on three things, when the glue is manufactured
        , when the glue is opened for the first time
        , and how it\'s stored</string>
    ---source
    <string name="cleansertext">Cleanser active ingredients tend to lose effectiveness after six months
    of usage </string>

    <string name="eyeshadowtext1">Types of Eyeshadow: Cream, and Powder</string>
    <string name="eyeshadowtext2">Powder eyeshadow\'s do last longer like powder blush, however it is ideal
    to replace more often since we use it around our eyes</string>
    <string name="facemasktext1">Generally can expire one to two years after the manufacturing date. Over time, the masks
        can become irritating to your face as the chemicals and ingredients within them begin to break down. Source from
    Dailyvanity.sg.</string>
    <string name="facemasktext2">Active ingredients, particularly glycolic and fruit acids, will become more potent and
        hence more irritating for your skin – so toss those expired face masks out ASAP</string>
    <string name="lipsticktext1">Lipstick doesn\’t hold much bacteria, so it can last between 12 – 18 months.</string>
    <string name="powdertext2">Since powders don\'t contain water it is very hard for bacteria to grow</string>
    <string name="powdertext">Types of powders: Highlighters and translucent powder</string>
    <string name="creamtext1">Over time and depending on the conditions in which you keep your moisturizer,
        you\’ll start to notice a difference in color and even smell. If this happens, say goodbye to that bottle.</string>
    <string name="nailtext1">“Nail polishes tend to get thick, dry and sticky after a year or so,” says Dr.Shainhouse .
        Though she adds that you can try to thin them out by adding acetone. But if they start going bitter, let them go.</string>
    <string name="lotiontext1">An expired lotion doesn\’t hurt or damage skin, but the product won\’t lock in moisture
        or hydrate as thoroughly. Sealed and unopened bottles should be good for three years.</string>
    <string name ="Brush">This page is to keep track of cleaning your brushes</string>
    <string name ="RecycleText1">Recycle is important according to science</string>
    <string name ="AboutMeHeader">About me</string>
    <string name ="AboutMeTextP">
         I developed this app because I wanted an app that would help me track
        the expiration date of every makeup product I use. I intended to make something simple and straight to the point.
        I started to do concept art of this app back in 2020.</string>
    <string name= "AboutMeTextP2">When I graduated I didn’t have a job lined up. That’s when I started to  develop the program.
        It was rough because I had to make it cute and appealing to the eye.I did work on this program by myself.
        procrastinated for a year since I did get a job.I am writing about myself in two years.</string>
</resources>
